Tuple element is rewritten Model termsfrequencies added performance increased 2 times