@@ -14,12 +14,12 @@ public class CSVParserTest {
         CSVParser cp = new CSVParser(",", "\r\n");
         LinkedList<Tuple> tp = (LinkedList<Tuple>) cp.get("values,41,0,0.0,0,0,0,0,0,0,0,0,0,0,0,0,y".getBytes());
 
-        assertTrue(tp.getFirst().getTupleElements().get(0).type == TupleElement.Type.String);
-        assertTrue(tp.getFirst().getTupleElements().get(3).type == TupleElement.Type.Double);
-        assertTrue(tp.getFirst().getTupleElements().get(1).type == TupleElement.Type.Int);
-        assertTrue(new String(tp.getFirst().getTupleElements().get(0).data).equals("values"));
-        assertTrue(ByteBuffer.allocate(Integer.BYTES).put(tp.getFirst().getTupleElements().get(1).data).position(0).getInt() == 41);
-        assertTrue(tp.getFirst().getTupleElements().get(16).type == TupleElement.Type.Char);
+        assertTrue(cp.getHeader().get(0).type == TupleElement.Type.String);
+        assertTrue(cp.getHeader().get(3).type == TupleElement.Type.Double);
+        assertTrue(cp.getHeader().get(1).type == TupleElement.Type.Int);
+        assertTrue(new String(cp.getHeader().get(0).data.toString()).equals("values"));
+        assertTrue(new String(cp.getHeader().get(1).data.toString()).equals("41"));
+        assertTrue(cp.getHeader().get(16).type == TupleElement.Type.Char);
 
 
 /*        for(Tuple ts: tp) {
